<resources>
    <string name="app_name">Daily.Maps</string>

    <!-- Page Titles -->
    <string name="task_list_toolbar_title">ЗАДАЧИ</string>
    <string name="add_task_toolbar_title">ДОБАВЛЕНИЕ ЗАДАНИЯ</string>
    <string name="profile_toolbar_title">ПРОФИЛЬ</string>
    <string name="template_toolbar_title">ШАБЛОН</string>
    <string name="settings_toolbar_title">НАСТРОЙКИ</string>
    <string name="route_toolbar_title"> МАРШРУТ</string>

    <!-- Add Task Fragment -->
    <string name="add_task_start_time_title">Время начала</string>
    <string name="add_task_duration_title">Длительность</string>
    <string name="add_task_priority_title">Приоритет</string>

    <string name="add_task_max_priority">Макс.</string>
    <string name="add_task_high_priority">Высокий</string>
    <string name="add_task_mid_priority">Средний</string>
    <string name="add_task_low_priority">Низкий</string>
    <string name="add_task_min_priority">Мин.</string>

    <!-- Dialog Labels -->
    <string name="template_title">Добавить в шаблон</string>
    <string name="template_create_new">Новый шаблон</string>

    <string name="dialog_cancel">ОТМЕНА</string>

    <!-- Bottom Navigation Titles -->
    <string name="bottom_navigation_home_title">Главная</string>
    <string name="bottom_navigation_add_task_title">Добавить задачу</string>
    <string name="bottom_navigation_profile_title">Профиль</string>

    <!-- Hints -->
    <string name="hint_field_email">Email</string>
    <string name="hint_field_password">Пароль</string>
    <string name="hint_button_login">Войти</string>
    <string name="hint_link_register">Ещё не  зарегестрированы?</string>


    <!-- DataBase Names  -->
    <string name="firestore_users_collection">users</string>
    <string name="firestore_tasks_collection">tasks</string>
    <string name="firestore_templates_collection">templates</string>

    <string name="GOOGLE_API_KEY">AIzaSyA2r1XJCQJf6xLdbm3GeFsWaUtnA8sSwO0</string>

    <string name="title_activity_route">RouteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="map_style_json">
        [
  {
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#ebe3cd"
      }
    ]
  },
  {
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#523735"
      }
    ]
  },
  {
    "elementType": "labels.text.stroke",
    "stylers": [
      {
        "color": "#f5f1e6"
      }
    ]
  },
  {
    "featureType": "administrative",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "color": "#c9b2a6"
      }
    ]
  },
  {
    "featureType": "administrative.land_parcel",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "color": "#dcd2be"
      }
    ]
  },
  {
    "featureType": "administrative.land_parcel",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#ae9e90"
      }
    ]
  },
  {
    "featureType": "landscape.natural",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#dfd2ae"
      }
    ]
  },
  {
    "featureType": "poi",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#dfd2ae"
      }
    ]
  },
  {
    "featureType": "poi",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#93817c"
      }
    ]
  },
  {
    "featureType": "poi.park",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#a5b076"
      }
    ]
  },
  {
    "featureType": "poi.park",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#447530"
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#f5f1e6"
      }
    ]
  },
  {
    "featureType": "road.arterial",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#fdfcf8"
      }
    ]
  },
  {
    "featureType": "road.highway",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#f8c967"
      }
    ]
  },
  {
    "featureType": "road.highway",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "color": "#e9bc62"
      }
    ]
  },
  {
    "featureType": "road.highway.controlled_access",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#e98d58"
      }
    ]
  },
  {
    "featureType": "road.highway.controlled_access",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "color": "#db8555"
      }
    ]
  },
  {
    "featureType": "road.local",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#806b63"
      }
    ]
  },
  {
    "featureType": "transit.line",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#dfd2ae"
      }
    ]
  },
  {
    "featureType": "transit.line",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#8f7d77"
      }
    ]
  },
  {
    "featureType": "transit.line",
    "elementType": "labels.text.stroke",
    "stylers": [
      {
        "color": "#ebe3cd"
      }
    ]
  },
  {
    "featureType": "transit.station",
    "elementType": "geometry",
    "stylers": [
      {
        "color": "#dfd2ae"
      }
    ]
  },
  {
    "featureType": "water",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#b9d3c2"
      }
    ]
  },
  {
    "featureType": "water",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#92998d"
      }
    ]
  }
]
    </string>

</resources>
