<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="16dp"
        android:text="@string/template_title"
        android:textColor="@color/BLACK"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/template_create_new_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_add_black_24dp"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/template_create_new"
        android:textColor="@color/BLACK"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/GREY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/tempalte_list_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/GREY" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/template_cancel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto"
            android:padding="6dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </FrameLayout>

</LinearLayout>