<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBackground"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close_grey_24dp"
            app:popupTheme="@style/AppTheme">

            <TextView
                android:id="@+id/add_task_toolbar_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_task_toolbar_title"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/add_task_toolbar_title_text_size" />

            <ImageButton
                android:id="@+id/add_task_toolbar_action_image_button"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_done_grey_24dp" />

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/add_task_start_time_title"
                    android:textColor="@color/GREY"
                    android:textSize="@dimen/add_task_start_time_title_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/add_task_duration_title"
                    android:textColor="@color/GREY"
                    android:textSize="@dimen/add_task_duration_title_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/add_task_priority_title"
                    android:textColor="@color/GREY"
                    android:textSize="@dimen/add_task_priority_title_text_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/add_task_start_time_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom|center_horizontal"
                    android:text="12:00"
                    android:textColor="@color/GREY"
                    android:textSize="@dimen/add_task_start_time_input_text_size" />

                <TextView
                    android:id="@+id/add_task_duration_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom|center_horizontal"
                    android:text="30 минут"
                    android:textColor="@color/GREY"
                    android:textSize="@dimen/add_task_duration_input_text_size" />

                <TextView
                    android:id="@+id/add_task_priority_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_fiber_manual_record_black_24dp"
                    android:drawablePadding="-8dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom|center_horizontal"
                    android:text="Средний"
                    android:textColor="@color/GREY"
                    android:textSize="@dimen/add_task_priority_input_text_size"
                    app:drawableTint="#FFD3B6" />

            </TableRow>


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/add_task_text_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/GREY"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:hint="Введите название"
                android:inputType="textPersonName"
                android:textColor="@color/GREY"
                android:textColorHint="@color/GREY" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false">

            <fragment
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".MapsActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>